@@ -360,6 +360,38 @@ You can access the configured statsd client from L<Catalyst>:
 
 Alternatively, you can use L<Catalyst::Plugin::Statsd>.
 
+=head2 Using with Plack::Middleware::SizeLimit
+
+L<Plack::Middleware::SizeLimit> version 0.11 supports callbacks that
+allow you to monitor process size information.  In your F<app.psgi>:
+
+  use Net::Statsd::Tiny;
+  use Try::Tiny;
+
+  my $statsd = Net::Statsd::Tiny->new( ... );
+
+  builder {
+
+    enable "Statsd",
+      client      => $statsd,
+      sample_rate => 1.0;
+
+    ...
+
+    enable "SizeLimit",
+      ...
+      callback => sub {
+          my ($size, $shared, $unshared) = @_;
+          try {
+              $statsd->timing_ms('psgi.proc.size', $size);
+              $statsd->timing_ms('psgi.proc.shared', $shared);
+              $statsd->timing_ms('psgi.proc.unshared', $unshared);
+          }
+          catch {
+              warn $_;
+          };
+      };
+
 =head1 KNOWN ISSUES
 
 =head2 Non-standard HTTP status codes
