@@ -1,6 +1,8 @@
 Revision history for Plack-Middleware-Statsd
 
 {{$NEXT}}
+  [Documentation]
+  - Added example with Plack::Middleware::SizeLimit.
 
 v0.4.3    2020-03-23 08:59:39+00:00 Europe/London
   - No changes since v0.4.2.
